Corrected spacing problems

--- a/styles/index.css
+++ b/styles/index.css
@@ -116,6 +116,7 @@ body {
 @media screen and (max-width: 650px) {
     #title-section-id {
         margin-left: 0;
+        margin-top: 20%;
         margin-bottom: 20%;
         width: 100%;
         height: 80vh;
@@ -132,10 +133,11 @@ body {
     #experience-section {
         width: 100%;
         height: 100vh;
-        margin-bottom: 50%;
+        margin-bottom: 150vh;
     }
 
     #experience-section #container-first-experience {
+        margin-top: 1rem;
         margin-bottom: 0;
     }
     #experience-section #container-second-experience {
@@ -143,7 +145,7 @@ body {
     }
 
     #contact-section {
-        margin-top: 4rem;
+        margin-top: 30%;
         margin-bottom: 1rem;
         width: 100%;
         height: 80vh;
